// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expensessummary with 1 expense  1`] = `
<div>
   
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render Expensessummary with multiple expense  1`] = `
<div>
   
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,100.00
  </h1>
</div>
`;
